--- a/css/styles.css
+++ b/css/styles.css
@@ -1,20 +1,50 @@
-h1 {
-    color:saddlebrown;
-    font-size: 50px;
-    text-align: center;
-}
 body {
-    background-color: skyblue;
+    background-color: antiquewhite;
 }
-a {
-    
-}
-h2 {
-    font-family: 'Gill Sans', sans-serif;
-}
-content {
-    margin: 100px
-}
-teal-links {
 
+h1 {
+    text-align: center;
+    font-size: 60px;
+    margin-top: 100px;
+    font-family: 'Ubuntu', sans-serif;
+}
+
+.city {
+    font-size: 50px;
+}
+
+button {
+    border: 8px solid salmon;
+    padding: 15px 32px;
+    text-align: center;
+    font-size: 30px;
+    border-radius: 8px;
+    background-color: white;
+    margin: 0;
+    position: absolute;
+    top: 80%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+}
+
+button:hover {
+    background-color: salmon; 
+    color: white;
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+}
+
+a {
+    text-decoration: none;
+    color: gray;
+}
+
+.text:hover {
+    zoom: 1.2;
+}
+
+.container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
